[project]
name = "bout"
version = "0.1.0"
description = 'NLP project for clustering the "About Us" website pages retrieved from the Common Crawl dataset.'
authors = [
    {name = "Roman Shevtsov", email = "rosh22ab@student.cbs.dk"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "spacy (>=3.8.4,<4.0.0)",
    "polars (>=1.22.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
